--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2024"
 actix-web = "4.12.1"
 reqwest = "0.13.1"
 tokio = { version = "1.49.0", features = ["macros"] }
+urlencoding = "2.1.3"
