--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,14 +5,16 @@ edition = "2024"
 
 [dependencies]
 actix-web = "4.12.1"
+chrono = "0.4.42"
 config = { version = "0.15.19", features = ["json", "toml", "yaml"] }
 
 reqwest = { version = "0.13.1", features = ["form", "json"] }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
-sqlx = { version = "0.8.6", features = ["macros", "postgres", "runtime-tokio"] }
+sqlx = { version = "0.8.6", features = ["chrono", "macros", "postgres", "runtime-tokio", "uuid"] }
 tokio = { version = "1.49.0", features = ["full"] }
 urlencoding = "2.1.3"
+uuid = { version = "1.19.0", features = ["v4"] }
 
 
 # [dependencies]
