modified:   Cargo.lock 	modified:   Cargo.toml 	modified:   src/main.rs(added the regular log middleware) 	modified:   src/startup.rs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2024"
 actix-web = "4.12.1"
 chrono = "0.4.42"
 config = { version = "0.15.19", features = ["json", "toml", "yaml"] }
+env_logger = "0.11.8"
+log = "0.4.29"
 
 reqwest = { version = "0.13.1", features = ["form", "json"] }
 serde = { version = "1.0.228", features = ["derive"] }
